--- a/package.json
+++ b/package.json
@@ -2,47 +2,53 @@
   "name": "scratch",
   "version": "1.0.0",
   "main": "index.js",
+  "scripts": {
+    "lint": "tslint './src/**/*.ts'"
+  },
   "repository": {
-    "url": "https://github.com/yngvebn/scratch.git",
+    "url": "https://github.com/yngvebn/ng2Chess.git",
     "type": "git"
   },
   "author": "Yngve Bakken Nilsen <yngve.nilsen@gmail.com>",
   "license": "MIT",
   "dependencies": {
-    "@angular/common": "^2.4.1",
-    "@angular/compiler": "^2.4.1",
-    "@angular/core": "^2.4.1",
-    "@angular/http": "^2.4.1",
-    "@angular/platform-browser": "^2.4.1",
-    "@angular/platform-browser-dynamic": "^2.4.1",
-    "@angular/router": "^3.4.1",
+    "@angular/common": "^4.0.0-beta.5",
+    "@angular/compiler": "^4.0.0-beta.5",
+    "@angular/core": "^4.0.0-beta.5",
+    "@angular/http": "^4.0.0-beta.5",
+    "@angular/platform-browser": "^4.0.0-beta.5",
+    "@angular/platform-browser-dynamic": "^4.0.0-beta.5",
+    "@angular/router": "^4.0.0-beta.5",
     "@types/core-js": "^0.9.35",
-    "@types/jasmine": "^2.5.38",
+    "@types/jasmine": "^2.5.41",
     "angular2-template-loader": "^0.6.0",
-    "awesome-typescript-loader": "^3.0.0-beta.17",
+    "awesome-typescript-loader": "^3.0.0-beta.18",
+    "codelyzer": "^2.0.0-beta.4",
     "core-js": "^2.4.1",
-    "extract-text-webpack-plugin": "^2.0.0-beta.4",
+    "extract-text-webpack-plugin": "^2.0.0-rc.2",
     "html-loader": "^0.4.4",
-    "html-webpack-plugin": "^2.24.1",
-    "jasmine": "^2.5.2",
+    "html-webpack-plugin": "^2.28.0",
+    "jasmine": "^2.5.3",
     "json-loader": "^0.5.4",
-    "karma": "^1.3.0",
+    "karma": "^1.4.1",
     "karma-chrome-launcher": "^2.0.0",
     "karma-jasmine": "^1.1.0",
     "karma-sourcemap-loader": "^0.3.7",
-    "karma-webpack": "^1.8.1",
+    "karma-webpack": "^2.0.2",
     "null-loader": "^0.1.1",
-    "phantomjs-polyfill": "^0.0.2",
+    "phantomjs-polyfill": "0.0.2",
+    "postcss-loader": "^1.2.2",
     "raw-loader": "^0.5.1",
-    "reflect-metadata": "0.1.7",
-    "rxjs": "^5.0.2",
+    "reflect-metadata": "^0.1.9",
+    "rxjs": "^5.0.3",
     "to-string-loader": "^1.1.5",
-    "ts-helpers": "^1.1.2",
-    "typescript": "^2.1.4",
-    "wallaby-webpack": "^0.0.27",
-    "webpack": "2.2.0-rc.2",
-    "webpack-dev-server": "2.2.0-rc.0",
-    "zone.js": "^0.7.4"
+    "ts-helpers": "latest",
+    "tslint": "^4.4.2",
+    "typescript": "^2.2.0-dev.20170130",
+    "wallaby-webpack": "0.0.32",
+    "webpack": "^2.2.0",
+    "webpack-dev-server": "latest",
+    "zone.js": "^0.7.6"
   },
   "devDependencies": {
     "css-loader": "^0.26.1",
